Regression: Image thumbnails in file browser sometimes do not show up #107212

Closed
opened 2023-04-21 10:16:57 +02:00 by Jesse Yurkovich · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 11:04, hash: da75495ada00
Worked: (newest version of Blender that worked as expected)

Caused by aa3bdfd76a

Short description of error
Image thumbnails in file browser sometimes do not show up.

Exact steps for others to reproduce the error
Missed during testing as the .thumbnails folder already had existing thumbnails for the images I was browsing, effectively hiding the issue entirely :(

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 11:04, hash: `da75495ada00` Worked: (newest version of Blender that worked as expected) Caused by aa3bdfd76a3 **Short description of error** Image thumbnails in file browser sometimes do not show up. **Exact steps for others to reproduce the error** Missed during testing as the `.thumbnails` folder already had existing thumbnails for the images I was browsing, effectively hiding the issue entirely :(
Jesse Yurkovich added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-04-21 10:16:58 +02:00
Jesse Yurkovich self-assigned this 2023-04-21 10:17:09 +02:00
Jesse Yurkovich added
Module
Core
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-04-21 10:17:38 +02:00
Author
Member

Working on the fix now.

Working on the fix now.
Julian Eisel added the
Interest
Asset Browser
label 2023-04-24 12:51:29 +02:00
Member

I am assuming the following is related to this issue. Otherwise let me know.

The following PNGs are just 8-bit rgb PNG files that load elsewhere (work in Gimp and Chrome for example) and their headers appear correct. Yet they don't pass the current imb_is_a_png test that uses openimageio.

They are part of some sample images I gathered for testing thumbnails. I get 177 failures out of the 542 files.

EDIT: I have removed the images that I originally posted as I'm not certain of their license. They might have been something I had purchased license for as part of a prior project, not sharable here. Or they are public domain and I can't remember.

I am assuming the following is related to this issue. Otherwise let me know. The following PNGs are just 8-bit rgb PNG files that load elsewhere (work in Gimp and Chrome for example) and their headers appear correct. Yet they don't pass the current `imb_is_a_png` test that uses openimageio. They are part of some sample images I gathered for testing thumbnails. I get 177 failures out of the 542 files. EDIT: I have removed the images that I originally posted as I'm not certain of their license. They might have been something I had purchased license for as part of a prior project, not sharable here. Or they are public domain and I can't remember.
Author
Member

@Harley Yes, those 2 PNGs will work once my PR lands for the issue here.

@Harley Yes, those 2 PNGs will work once my PR lands for the issue here.
Member

Awesome!

I made design doc to do with user feedback during thumbnail creation that you might want to wade in on: #107380

Awesome! I made design doc to do with user feedback during thumbnail creation that you might want to wade in on: https://projects.blender.org/blender/blender/issues/107380

I tried different solutions and only deleting metadata gets PNG files to show up normally:

exiftool -ext png -overwrite_original -all= .

I tried different solutions and only deleting metadata gets PNG files to show up normally: `exiftool -ext png -overwrite_original -all= .`
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-06 00:16:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107212
No description provided.