source/blender/imbuf/intern/format_psd.cc
@@ -13,7 +13,11 @@ extern "C" {
 
 bool imb_is_a_psd(const uchar *mem, size_t size)
 {
-  return imb_oiio_check(mem, size, "psd");
+  const uchar magic[4] = {'8', 'B', 'P', 'S'};
+  if (size < sizeof(magic)) {
+    return false;
+  }
+  return memcmp(magic, mem, sizeof(magic)) == 0;
 }
 
 ImBuf *imb_load_psd(const uchar *mem, size_t size, int flags, char colorspace[IM_MAX_SPACE])
